@@ -1,5 +1,9 @@
 2021-07-01  Werner Lemberg  <wl@gnu.org>
 
+	* meson.build: Fix version string.
+
+2021-07-01  Werner Lemberg  <wl@gnu.org>
+
 	* subprojects/freetype2.wrap (revision): s/head/HEAD/.
 
 2021-06-30  Werner Lemberg  <wl@gnu.org>
